Fixed navbar alignment bug and integrated PDF into about page

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,44 +1,46 @@
 header .navbar-light .navbar-brand{
-text-transform: uppercase;
-font-size: 32px;
-}
-header .nav{
-	margin-top: 10px;
-}
-header a.nav-link{
-padding: 10px 12px;
-}
-.jumbotron{
-	text-align: center;
-}
-.services{
-	padding: 100px 0;
-	text-align: center;
-}
-footer{
-	background-color: #eceeef;
-	text-align: center;
-	padding: 10px 0;
-}
-footer p{
-	margin: 0;
-	font-size: 13px;
-}
-@media (max-width: 33.9em) {
-	.navbar-toggler{
-		float: left;
-	}
-	.navbar-brand{
-		margin-top: 0;
-		float: none;
+	text-transform: uppercase;
+	font-size: 32px;
+	margin-top: 14px;
+	margin-bottom: 0px;
 	}
 	header .nav{
-		float: none !important;
+		margin-top: 10px;
 	}
-	.navbar-nav .nav-item{
-		float: none;
+	header a.nav-link{
+	padding: 10px 12px;
 	}
-	.navbar-nav .nav-item + .nav-item{
-		margin-left: 0;
+	.jumbotron{
+		text-align: center;
 	}
-}
+	.services{
+		padding: 100px 0;
+		text-align: center;
+	}
+	footer{
+		background-color: #eceeef;
+		text-align: center;
+		padding: 10px 0;
+	}
+	footer p{
+		margin: 0;
+		font-size: 13px;
+	}
+	@media (max-width: 33.9em) {
+		.navbar-toggler{
+			float: left;
+		}
+		.navbar-brand{
+			margin-top: 0;
+			float: none;
+		}
+		header .nav{
+			float: none !important;
+		}
+		.navbar-nav .nav-item{
+			float: none;
+		}
+		.navbar-nav .nav-item + .nav-item{
+			margin-left: 0;
+		}
+	}
